--- a/.gitignore
+++ b/.gitignore
@@ -24,14 +24,14 @@ migrate_working_dir/
 #.vscode/
 
 # Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.flutter-plugins-dependencies
-.pub-cache/
-.pub/
+#**/doc/api/
+#**/ios/Flutter/.last_build_id
+#.dart_tool/
+#.flutter-plugins
+#.flutter-plugins-dependencies
+3.flutter-plugins-dependencies
+#.pub-cache/
+#.pub/
 /build/
 
 # Symbolication related
