--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   path_provider: ^2.1.4
+  file_selector: ^1.0.4
 
 dev_dependencies:
   flutter_test:
