--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   path_provider: ^2.1.4
   file_selector: ^1.0.4
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
