--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   path_provider: ^2.1.4
   file_selector: ^1.0.4
   path: ^1.9.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
